force-app/main/default/objects/Directive_Signal__c/Directive_Signal__c.object-meta.xml
<CustomObject>
    <description>Directive Signal</description>
    <label>Signal</label>
    <nameField>
        <displayFormat>SIG-{0000000}</displayFormat>
        <label>Signal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>