force-app/main/default/objects/Directive_Signal__c/fields/Normalized_Value__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Value__c</fullName>
    <label>Normalized Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>