force-app/main/default/objects/Directive_Signal__c/fields/Raw_Value__c.field-meta.xml
<CustomField>
    <fullName>Raw_Value__c</fullName>
    <label>Raw Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>