force-app/main/default/objects/Directive_Signal__c/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <label>Rule Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>